Mise à jour landing mini-site avec nouveau design

--- a/index.html
+++ b/index.html
@@ -2,27 +2,35 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon Mini-Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mini-site Vitrine - Samdi Solutions</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Bienvenue chez Samdi Solutions</h1>
-    <p>Mini-site vitrine – 100 000 FCFA | 48 h de livraison</p>
-    <a href="https://wa.me/22784742678" class="btn">Contactez-nous sur WhatsApp</a>
+  <header class="header">
+    <h1>Mini-site Vitrine Clé en Main</h1>
+    <p>1–3 pages | Livraison en 48 h | 100 000 FCFA</p>
+    <a href="https://wa.me/22784742678?text=Je+suis+int%C3%A9ress%C3%A9+par+le+mini-site" class="btn">Réservez Maintenant</a>
   </header>
 
-  <section id="services">
-    <h2>Nos Services</h2>
-    <ul>
-      <li>Création de site vitrine</li>
-      <li>Maintenance web</li>
-      <li>Cours de soutien WhatsApp</li>
-    </ul>
+  <section class="features">
+    <div class="feature">
+      <h2>Design Professionnel</h2>
+      <p>Template moderne adapté à votre activité.</p>
+    </div>
+    <div class="feature">
+      <h2>Hébergement Inclus</h2>
+      <p>Sous‑domaine netlify.app + HTTPS gratuit.</p>
+    </div>
+    <div class="feature">
+      <h2>Support & Mise en Ligne</h2>
+      <p>Assistance WhatsApp et guide d'utilisation.</p>
+    </div>
   </section>
 
-  <footer>
-    <p>© 2025 Samdi Solutions – +227 84 74 26 78</p>
+  <footer class="footer">
+    <p>© 2025 Samdi Solutions</p>
+    <p>+227 84 74 26 78 | <a href="mailto:sadoudiallo303@gmail.com">sadoudiallo303@gmail.com</a></p>
   </footer>
 </body>
 </html>
